Real font height calculation fixed & CSS grid overflow

--- a/web/static/my.css
+++ b/web/static/my.css
@@ -102,7 +102,7 @@ section > div {
 	margin: 10px;
 	display: flex;
 	flex-direction: column;
-	/* height: calc(100vh - 20px); */
+	overflow: hidden;
 }
 
 .tab {
@@ -516,7 +516,6 @@ div:has(input:checked:nth-of-type(1)) label:nth-of-type(1) + .wbuttons, div:has(
 }
 
 section > div:not(.active) {
-	border: 1px solid var(--background);
 	opacity: 0.6;
 }
 
